@@ -1,3 +1,8 @@
+2005-09-17  Pablo Arroyo <zioma@linups.org>
+
+	* data/buoh-ui.xml:
+	* src/buoh-window.c: Added the comic view popup menu.
+
 2005-09-16  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* src/buoh-properties-dialog.[ch]: get_comic_manager method added
